--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8",
-    "axios": "^1.6.0"
+    "puppeteer": "^21.3.8"
   }
 }
