--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.18.2",
-    "puppeteer-core": "^21.3.8"
+    "puppeteer": "^21.3.8"
   }
 }
