--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "iboard-capture",
+  "name": "cafef-screenshot",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2",
-    "puppeteer": "^21.3.8"
+    "puppeteer": "^21.3.8",
+    "express": "^4.18.2"
   }
 }
