--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "puppeteer": "^21.3.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.8"
+  },
+  "puppeteer": {
+    "skipDownload": true
   }
 }
